@@ -27,6 +27,7 @@ set(LUXCOREIMPL_SERIALIZATIONDEMO_SRCS
 	)
 
 include_directories(${LuxRays_SOURCE_DIR}/deps/bcd-1.1/include)
+include_directories(${LuxRays_SOURCE_DIR}/deps/opencolorio-2.0.0/include)
 
 add_executable(luxcoreimplserializationdemo ${LUXCOREIMPL_SERIALIZATIONDEMO_SRCS})
 
